--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
 	<build>
 		<plugins>
 			<plugin>
+			    <groupId>org.owasp</groupId>
+			    <artifactId>dependency-check-maven</artifactId>
+			    <version>6.2.2</version>
+			    <executions>
+				<execution>
+				    <goals>
+					<goal>check</goal>
+				    </goals>
+				</execution>
+			    </executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
